--- a/analysis/templates/html/amount-of-committers-chart.html
+++ b/analysis/templates/html/amount-of-committers-chart.html
@@ -943,6 +943,7 @@ date,value\n\
         var xAxisHeight = 30;
 
         var root = d3.select("#amount-of-committers-chart");
+        removeChildrenOf("amount-of-committers-chart");
         var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
         newHeader(root, uiConfig, "Amount of committers (" + projectName + ")");
 
