--- a/analysis/templates/html/change-size-by-file-type-chart.html
+++ b/analysis/templates/html/change-size-by-file-type-chart.html
@@ -118,6 +118,7 @@ date,category,value\n\
         var xAxisHeight = 30;
 
         var root = d3.select("#change-size-by-file-type-chart");
+        removeChildrenOf("change-size-by-file-type-chart");
         var projectName = /*project_name_placeholder*/"some project"/*project_name_placeholder*/;
         newHeader(root, uiConfig, "Change size by file type chart (" + projectName + ")");
 
