extracted stacked-barchart.css (right now just for tooltip)

--- a/analysis/templates/html/amount-of-changing-files-chart.html
+++ b/analysis/templates/html/amount-of-changing-files-chart.html
@@ -35,19 +35,11 @@
     .legend .items {
         font-size: 12px;
     }
-    .tooltip {
-        position: absolute;
-        text-align: center;
-        height: auto;
-        padding: 5px;
-        font: 12px sans-serif;
-        background: lightsteelblue;
-        border: 0;
-        border-radius: 8px;
-        pointer-events: none;
-    }
 </style>
-<head><title>Amount of changing files chart</title></head>
+<head>
+    <title>Amount of changing files chart</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
+</head>
 <body>
 <span id="amount-of-changing-files-chart"></span>
 <script src="d3.v3.min.js"></script>
