--- a/analysis/templates/html/changes-size-chart.html
+++ b/analysis/templates/html/changes-size-chart.html
@@ -28,19 +28,11 @@
         fill-opacity: .125;
         shape-rendering: crispEdges;
     }
-    .tooltip {
-        position: absolute;
-        text-align: center;
-        height: auto;
-        padding: 5px;
-        font: 12px sans-serif;
-        background: lightsteelblue;
-        border: 0;
-        border-radius: 8px;
-        pointer-events: none;
-    }
 </style>
-<head><title>Change size chart</title></head>
+<head>
+    <title>Change size chart</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
+</head>
 <body>
 <span id="change-size-chart"></span>
 <script src="d3.v3.min.js"></script>
