all visualization script with comments

--- a/analysis/templates/html/stylesheets/stylesheet.css
+++ b/analysis/templates/html/stylesheets/stylesheet.css
@@ -351,7 +351,7 @@ Full-Width Styles
   z-index: 10;
   padding: 10px 50px 10px 10px;
   color: #fff;
-  background: url('../images/blacktocat.png') #0090ff no-repeat 95% 50%;
+  background: url('images/blacktocat.png') #0090ff no-repeat 95% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
@@ -369,6 +369,9 @@ Full-Width Styles
 
 #header_wrap .inner {
   padding: 30px 10px 30px 10px;
+}
+#header_wrap_lowered .inner {
+  padding: 50px 10px 30px 10px;
 }
 
 #project_title {
