--- a/analysis/templates/html/all-visualizations-ghpages.html
+++ b/analysis/templates/html/all-visualizations-ghpages.html
@@ -13,7 +13,7 @@
 
 <body>
 <!-- HEADER -->
-<div id="header_wrap" class="outer" style="max-height: 120px">
+<div id="header_wrap_lowered" class="outer" style="max-height: 120px">
     <header class="inner">
         <a id="forkme_banner" href="https://github.com/dkandalov/code-history-mining">View on GitHub</a>
         <h1 id="project_title">{{project-name}} code history</h1>
@@ -33,7 +33,7 @@
 <div id="footer_wrap" class="outer">
     <footer class="inner">
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a>.</p>
-        <p class="copyright">Please feel free to <a href="https://twitter.com/dmitrykandalov">drop me a line</a>
+        <p class="copyright">Feel free to <a href="https://twitter.com/dmitrykandalov">drop me a line</a>
             or <a href="https://github.com/dkandalov/code-history-mining/issues">create an issue</a> on GitHub.
         </p>
     </footer>
