--- a/analysis/templates/html/changes-size-chart.html
+++ b/analysis/templates/html/changes-size-chart.html
@@ -90,6 +90,54 @@ date,value\n\
 ",
 "\
 date,value\n\
+11/08/2012,14218\n\
+13/08/2012,12977\n\
+14/08/2012,19705\n\
+15/08/2012,243553\n\
+16/08/2012,3527\n\
+17/08/2012,21786\n\
+19/08/2012,41839\n\
+20/08/2012,404475\n\
+21/08/2012,1388\n\
+23/08/2012,10796\n\
+25/08/2012,19911\n\
+26/08/2012,259407\n\
+21/09/2012,4145\n\
+07/10/2012,4892\n\
+08/10/2012,250\n\
+09/10/2012,316\n\
+15/11/2012,491\n\
+22/11/2012,36125\n\
+06/12/2012,306\n\
+07/12/2012,966\n\
+20/01/2013,30956\n\
+21/01/2013,934\n\
+22/01/2013,16863\n\
+23/01/2013,1795\n\
+24/01/2013,834\n\
+25/01/2013,1955\n\
+26/01/2013,2913\n\
+27/01/2013,42995\n\
+28/01/2013,5739\n\
+29/01/2013,11892\n\
+30/01/2013,18014\n\
+31/01/2013,251902\n\
+01/02/2013,3082\n\
+02/02/2013,3682\n\
+04/02/2013,5919\n\
+07/02/2013,665\n\
+10/02/2013,232\n\
+15/02/2013,137\n\
+18/02/2013,2045\n\
+19/02/2013,2049\n\
+20/02/2013,731\n\
+22/02/2013,594\n\
+23/02/2013,4627\n\
+24/02/2013,355\n\
+05/03/2013,11284\
+",
+"\
+date,value\n\
 11/08/2012,1114218\n\
 13/08/2012,12977\n\
 14/08/2012,19705\n\
@@ -220,7 +268,7 @@ date,value\n\
         controlsPanel.addSpace();
         var groupBy = newGroupByDropDown(controlsPanel, data, "Group by: ", ["day", "week", "month"]);
         controlsPanel.addSpace();
-        newGroupIndexDropDown(controlsPanel, data, "Change size measured in: ", ["commits", "lines", "characters"]);
+        newGroupIndexDropDown(controlsPanel, data, "Change size measured in: ", ["commits", "files", "lines", "characters"]);
         controlsPanel.addSpace();
         var totalSize = newTotalAmountLabel(root, svgRoot, uiConfig, "Total size: ");
 
