--- a/analysis/templates/html/amount-of-committers-chart.html
+++ b/analysis/templates/html/amount-of-committers-chart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<style></style>
 <head>
     <title>Amount of committers</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
