--- a/analysis/templates/html/amount-of-files-in-commit-chart.html
+++ b/analysis/templates/html/amount-of-files-in-commit-chart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<style></style>
 <head>
     <title>Average amount of files in commit</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/stacked-barchart.css">
