--- a/word-occurences/stylesheets/stacked-barchart.css
+++ b/word-occurences/stylesheets/stacked-barchart.css
@@ -1,7 +1,7 @@
 .bar-chart-body {
     font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     margin: auto;
-    width: 960px;
+    /*width: 960px;*/
     background: #f2f2f2;
 }
 
