refactoring to extract HtmlTemplate

--- a/codemining/plugin/ui/templates/plugin-template.html
+++ b/codemining/plugin/ui/templates/plugin-template.html
@@ -30,14 +30,14 @@
             float:none;
         }
     </style>
-    <title>{{project-name}}</title>
+    <title><!--project-name-->Some Project<!--project-name--></title>
 </head>
 
 <body>
 <!-- HEADER -->
 <nav class="navbar navbar-inverse" role="navigation">
     <div class="navbar-header">
-        <span class="navbar-brand">{{project-name}}</span>
+        <span class="navbar-brand"><!--project-name-->Some Project<!--project-name--></span>
     </div>
 </nav>
 
